chore: upgrade eslint-config-rndmem to v6.0.0
https://github.com/rndmem/eslint-config-rndmem#v500
https://github.com/rndmem/eslint-config-rndmem#v600

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "eslint": "3.12.2",
-    "eslint-config-rndmem": "4.0.1",
+    "eslint-config-rndmem": "6.0.0",
+    "eslint-plugin-eslint-comments": "1.0.0",
     "eslint-plugin-jsdoc": "2.4.0",
     "eslint-plugin-json": "1.2.0",
     "eslint-plugin-node": "3.0.5",
